feat(efd2): expand to 11-arm experiment (A-K) with trust discount and tuning
- Add Arms J (trust-discounted cumulative) and K (trust-discounted three-way)
- G/H now use validation-tuned thresholds instead of hardcoded
- Record trust weights and tuned thresholds in metadata
- Update significance test pairs for new arms
- Gitignore internal/ planning directory

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,6 @@ desktop.ini
 # Ruff
 .ruff_cache/
 
-# Development continuation docs (contain internal paths)
-CONTINUATION.md
-
+# Internal planning docs (contain local paths, analysis, continuation prompts)
+internal/
 CONTINUATION.md
